--- a/src/components/driverProfileRegistration/DriverProfileBilling.css
+++ b/src/components/driverProfileRegistration/DriverProfileBilling.css
@@ -251,7 +251,8 @@
 
 .copyElement {
     background-size: 25px 25px;
-    width: 25px;
+    min-width: 100px;
+    text-align: center;
 }
 
 @media (max-width: 1140px) {
