--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -72,6 +72,10 @@ html {
     bottom: 0px;
     min-height: 56px;
     box-shadow: 0 -5px 5px -5px rgba(0, 0, 0, 0.2);
+    transition: all 0.3s;
+}
+.footerMobile_active{
+    bottom: -56px;
 }
 
 .footerMobile a {
