--- a/src/components/driverProfileRegistration/DriverProfileNavigation.css
+++ b/src/components/driverProfileRegistration/DriverProfileNavigation.css
@@ -87,7 +87,9 @@
 
 .basicInformationBodyTopImgHover img {
     width: 156px;
+    min-width: 156px;
     height: 156px;
+    min-height: 156px;
     border-radius: 10%;
     object-fit: cover;
 }
@@ -186,7 +188,9 @@
 
     .basicInformationBodyTopImgHover img {
         width: 90px;
+        min-height: 90px;
         height: 90px;
+        min-width: 90px;
     }
 
     .bodyTopDriverInfoName p {
