--- a/src/components/drivers/DriversBody/DriversProperties/components/LanguageMenu/LanguageMenu.css
+++ b/src/components/drivers/DriversBody/DriversProperties/components/LanguageMenu/LanguageMenu.css
@@ -13,6 +13,7 @@
     max-width: 120px;
     border-radius: 5px;
     background-color: #828ca5;
+    /* background-color: #304269; */
     z-index: 30;
 }
 
