--- a/src/components/driverProfileRegistration/DriverProfileTripSettingsTrip.css
+++ b/src/components/driverProfileRegistration/DriverProfileTripSettingsTrip.css
@@ -17,7 +17,7 @@
 .tripSettingsContent label {
     font-weight: 400;
     font-size: 14px;
-    color: #686868;
+    color:  rgba(0, 0, 0, 0.5) !important;
     margin-bottom: 0px;
 }
 
