--- a/src/components/Places/PlacesList.css
+++ b/src/components/Places/PlacesList.css
@@ -128,6 +128,19 @@
     align-items: flex-end;
 }
 
+.placesList_loading{
+    width: 100%;
+    background: url(../media/loadingBg.svg) no-repeat;
+    background-size: 60% 60%;
+    background-position: top 10% center;
+    height: 450px;
+    font-size: 24px;
+    color: #304269;
+    display: flex;
+    justify-content: center;
+    align-items: flex-end;
+}
+
 .placesList_noElementsBlock span {
     height: max-content;
     width: 48%;
