--- a/src/components/TourDescription/TourInfo.css
+++ b/src/components/TourDescription/TourInfo.css
@@ -46,13 +46,13 @@
 }
 
 .searchInputTourInfoContent{
-    color: #686868;
+    color: rgba(0, 0, 0, 0.6);
     padding: 0px 10px;
     background: #fff;
 }
 
 .searchInputTourInfoContent::placeholder{
-    color: #686868;
+    color: rgba(0, 0, 0, 0.6);
     padding: 0px 15px;
     background: url(../media/geo_icon.svg) no-repeat;
     background-size: 13px 16px;
@@ -63,4 +63,54 @@
     text-decoration: none;
     border: none;
     outline: none;
+}
+
+ .calendarModal.tourInfoContentDate{
+     max-height: 44px;
+    background-color: #fff !important;
+    line-height: 15px;
+}
+.calendarModal.tourInfoContentDate input{
+    background-size: 14px 14px;
+    background-position: top 16px right 10px;
+}
+
+.tourInfoContentDate div{
+    color: rgba(0, 0, 0, 0.6) !important;
+    padding-bottom: 2px;
+}
+
+.dropdownClass.tourInfoContentDate.MuiInputBase-root{
+    min-height: 44px;
+    border-radius: 5px !important;
+    background-color: #fff !important;
+    color: rgba(0, 0, 0, 0.6);
+}
+
+@media (max-width: 768px) {
+    .tourInfoContent p{
+        font-size: 20px;
+        margin-bottom: 10px;
+    }
+    .searchInputTourInfoContent{
+        margin-bottom: 10px;
+    }
+    .calendarModal.tourInfoContentDate {
+        max-height: 44px !important;
+        border: none !important;
+        margin-bottom: 5px;
+    }
+    .calendarModal.tourInfoContentDate input {
+        padding-top: 0px !important;
+    }
+
+    .calendarModal.tourInfoContentDate hr{
+        display: none !important;
+    }
+    .dropdownClass.tourInfoContentDate.MuiInputBase-root{
+        min-height: 44px;
+        padding: 0px 10px;
+        max-width: 100%;
+        margin-bottom: 10px;
+    }
 }
