--- a/src/components/driverProfileRegistration/DriverProfileBasicInformation.css
+++ b/src/components/driverProfileRegistration/DriverProfileBasicInformation.css
@@ -29,7 +29,7 @@
 }
 
 .basicInformationBodyBottomContent label {
-    color: #686868;
+    color:  rgba(0, 0, 0, 0.5) !important;
     font-weight: 400;
     font-size: 14px;
     min-height: 40px;
