--- a/src/components/TourDescription/TourInfo.css
+++ b/src/components/TourDescription/TourInfo.css
@@ -85,6 +85,7 @@
     border-radius: 5px !important;
     background-color: #fff !important;
     color: rgba(0, 0, 0, 0.6);
+    max-width: 100%;
 }
 
 @media (max-width: 768px) {
