--- a/src/components/drivers/DriversBody/DriversProperties/components/PeopleMenu/PeopleMenu.css
+++ b/src/components/drivers/DriversBody/DriversProperties/components/PeopleMenu/PeopleMenu.css
@@ -2,7 +2,7 @@
     position: absolute;
     top: 42px;
     right: 0;
-    height: 120px;
+    height: max-content;
     width: 200px;
     background-color: #fff;
     box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
@@ -15,6 +15,7 @@
     flex-direction: column;
     align-items: center;
     border-radius: 5px;
+    padding: 10px 0px;
     background: rgba(48, 66, 105, 0.6);
     width: 100%;
     height: 100%;
