add new function

--- a/src/components/drivers/DriversBody/DriversProperties/components/AutoMenu/AutoMenu.css
+++ b/src/components/drivers/DriversBody/DriversProperties/components/AutoMenu/AutoMenu.css
@@ -21,6 +21,9 @@
     /* box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22); */
     z-index: 30;
 }
+.classFormControl .MuiSelect-icon{
+    color: #fff !important;
+}
 
 .classFormControl .MuiSelect-selectMenu {
     color: #fff !important;
