--- a/src/components/TourDescription/TourInfo.css
+++ b/src/components/TourDescription/TourInfo.css
@@ -47,13 +47,13 @@
 
 .searchInputTourInfoContent{
     color: rgba(0, 0, 0, 0.6);
-    padding: 0px 10px;
+    padding: 10px !important;
     background: #fff;
 }
 
 .searchInputTourInfoContent::placeholder{
     color: rgba(0, 0, 0, 0.6);
-    padding: 0px 15px;
+    padding: 0px 15px !important;
     background: url(../media/geo_icon.svg) no-repeat;
     background-size: 13px 16px;
     background-position: left center;
@@ -64,6 +64,7 @@
     border: none;
     outline: none;
 }
+
 
  .calendarModal.tourInfoContentDate{
      max-height: 44px;
