--- a/src/components/Tours/ToursListElement.css
+++ b/src/components/Tours/ToursListElement.css
@@ -13,7 +13,7 @@
     background: #f60;
 }
 
-.toursDate{
+.toursDate {
     position: absolute;
     z-index: 17;
     left: 0;
@@ -25,9 +25,53 @@
     border-radius: 5px 0px 5px 0px;
 }
 
-.toursNumberPeoples div{
+.toursDuration {
+    position: absolute;
+    z-index: 17;
+    left: 0;
+    bottom: 0px;
+    background: #fff;
+    color: #686868;
+    font-weight: 400;
+    padding: 2px 5px;
+    font-size: 13px;
+    border-radius: 0px 5px 0px 0px;
+}
+
+.toursNumberPeoples div {
     color: #304269;
     font-weight: 400;
     font-size: 12px;
     padding-bottom: 2px;
+}
+
+.placesList_info_guide {
+    cursor: pointer;
+    position: relative;
+    width: 32px;
+    height: 32px;
+    background: url(../media/tour-guide.svg) no-repeat;
+    background-size: 100% 100%;
+}
+
+.placesList_info_guide-toolTip {
+    display: none;
+    position: relative;
+    z-index: 50;
+    padding: 2px 5px;
+    margin-left: 8px;
+    width: max-content;
+}
+
+.placesList_info_guide:hover .placesList_info_guide-toolTip {
+    display: block;
+    position: absolute;
+    top: -30px;
+    right: 60%;
+    background: rgba(0, 0, 0, 0.8);
+    border: none;
+    border-radius: 5px 5px 0px 5px;
+    color: #fff;
+    font-size: 14px;
+    font-weight: 400;
 }
