--- a/src/components/drivers/DriversBody/DriversProperties/components/LanguageMenu/LanguageMenu.css
+++ b/src/components/drivers/DriversBody/DriversProperties/components/LanguageMenu/LanguageMenu.css
@@ -27,6 +27,10 @@
     font-size: 14px;
 }
 
+.classFormControlLanguage .MuiSelect-icon{
+    color: #fff !important;
+}
+
 .languageMenu_element {
     position: relative;
     width: 116px;
