--- a/src/pageNotFound.css
+++ b/src/pageNotFound.css
@@ -1,27 +1,28 @@
 .pageNotFound {
     background: url(./components/media/404.svg)no-repeat;
     background-size: 60% 100%;
-    background-position: top -120px center;
+    background-position: center center;
     height: 87.5vh;
 }
 
 .pageNotFound span {
     font-size: 24px;
     color: #304269;
+    display: flex;
+    align-items: center;
 }
 
 .pageNotFound a {
     font-size: 24px;
     color: #356add;
     cursor: pointer;
-    margin-bottom: 55%;
 }
 
 @media (max-width: 990px) {
     .pageNotFound {
         background: url(./components/media/404.svg)no-repeat;
         background-size: 100% 100%;
-        background-position: top -120px center;
+        background-position: center center;
         height: 87.5vh;
     }
 
@@ -35,6 +36,5 @@
         font-size: 18px;
         color: #356add;
         cursor: pointer;
-        margin-bottom: 100%;
     }
 }
