--- a/src/components/Tours/ToursListElement.css
+++ b/src/components/Tours/ToursListElement.css
@@ -36,7 +36,6 @@
     padding: 2px 5px;
     font-size: 13px;
     border-radius: 5px 5px 0px 0px;
-    box-shadow: 0px -2px 4px 0px rgba(0, 0, 0, 0.5);
 }
 
 .toursNumberPeoples div {
@@ -51,15 +50,14 @@
     position: relative;
     width: 32px;
     height: 32px;
-    background: url(../media/tour-guide.svg) no-repeat;
-    background-size: 100% 100%;
+    background-size: 100% 100% !important;
 }
 
 .placesList_info_guide-toolTip {
     display: none;
     position: relative;
     z-index: 50;
-    padding: 2px 5px;
+    padding: 4px 8px;
     margin-left: 8px;
     width: max-content;
 }
@@ -71,8 +69,10 @@
     right: 60%;
     background: rgba(0, 0, 0, 0.8);
     border: none;
-    border-radius: 5px 5px 0px 5px;
+    border-radius: 20px 20px 0px 20px;
     color: #fff;
-    font-size: 14px;
+    font-size: 12px;
     font-weight: 400;
+    font-style: normal;
+    font-family: "Roboto";
 }
