--- a/src/components/TourDescription/TourInfo.css
+++ b/src/components/TourDescription/TourInfo.css
@@ -1,6 +1,6 @@
 .tourInfoBlock {
     position: relative;
-    background: rgba(48, 66, 105, 0.6);
+    background: #fff;
     border-radius: 5px;
     padding: 25px 0px !important;
     margin: 20px 10px;
@@ -8,7 +8,7 @@
 }
 
 .tourInfoContent p {
-    color: #fff;
+    color: #304269;
     font-weight: 400;
     font-size: 18px;
     margin: 0px;
@@ -47,17 +47,27 @@
 }
 
 .searchInputTourInfoContent {
-    color: rgba(0, 0, 0, 0.6);
+    color: #666;
+    font-size: 16px ;
     padding: 10px !important;
     background: #fff;
+    border: 1px solid #304269 !important;
 }
 
 .searchInputTourInfoContent::placeholder {
-    color: rgba(0, 0, 0, 0.6);
+    color: #666;
+    font-size: 14px;
+    font-weight: 400;
     padding: 0px 15px !important;
     background: url(../media/geo_icon.svg) no-repeat;
     background-size: 13px 16px;
     background-position: left center;
+}
+
+#places option {
+    color: #304269;
+    font-size: 14px;
+    font-weight: 400;
 }
 
 .searchInputTourInfoContent:focus {
@@ -69,33 +79,52 @@
 
 .calendarModal.tourInfoContentDate {
     cursor: pointer;
-    max-height: 25px;
+    max-height: 48px;
     background-color: transparent !important;
     border: none !important;
-    line-height: 12px;
-    max-width: 150px !important;
+    max-width: 190px !important;
+    background: #fff !important;
+    border: 1px solid #303269 !important;
 }
-.calendarModal.tourInfoContentDate div {
-    max-height: 25px;
-    height: 25px !important;
-    font-size: 14px !important;
-    color: #fff !important;
-    text-align: left;
-    bottom: 0px !important;
 
+.dropdownClass.tourInfoContentDate {
+    border: 1px solid #303269 !important;
+}
+
+
+.calendarModal.tourInfoContentDate div {
+    max-height: 48px;
+    height: 48px !important;
+    font-size: 14px !important;
+    color: #666 !important;
+    text-align: center;
+    line-height: 35px !important;
+    bottom: 0px !important;
+}
+.MuiMenuItem-root {
+    color: #666 !important;
+    font-weight: 400 !important;
+    font-size: 14px !important;
+}
+.MuiMenuItem-root:hover{
+    color: #304269 !important;
+    font-weight: 500 !important;
 }
 
 .calendarModal.tourInfoContentDate input {
-    padding-left: 0px !important;
-    background: url(../media/calendarWhite.svg) no-repeat;
+    padding-left: 10px !important;
+    background: url(../media/calendarGray.svg) no-repeat;
     background-size: 14px 14px;
-    background-position: top 4px right 10px;
-    color: #fff !important;
+    background-position: top 9px left 5px;
+    color: rgba(0, 0, 0, 0.6) !important;
     font-size: 14px !important;
+    padding-bottom: 10px !important;
 }
 
 .tourInfoContentDate div {
-    color: rgba(0, 0, 0, 0.6) !important;
+    color: #666 !important;
+    font-weight: 400 !important;
+    font-size: 14px !important;
     padding-bottom: 2px;
 }
 
@@ -105,6 +134,26 @@
     background-color: #fff !important;
     color: rgba(0, 0, 0, 0.6);
     max-width: 100%;
+}
+
+.tourInfoContentDateMobail div {
+    color: #304269 !important;
+}
+
+.dropdownClass.tourInfoContentDateMobail.MuiInputBase-root {
+    min-height: 64px;
+    border-radius: 5px !important;
+    color: #304269;
+}
+
+.calendarModal.tourInfoContentDateMobail input {
+    padding-left: 10px !important;
+    background: url(../media/calendarGray.svg) no-repeat;
+    background-size: 14px 14px;
+    background-position: center right;
+    color: #304269 !important;
+    font-size: 14px !important;
+    text-indent: 0px;
 }
 
 @media (max-width: 768px) {
@@ -117,10 +166,22 @@
         margin-bottom: 10px;
     }
 
+    .calendarModal.tourInfoContentDate div {
+        line-height: 40px !important;
+    }
+
+    .calendarModal.tourInfoContentDate input {
+        padding-left: 14px !important;
+        background: url(../media/calendarGray.svg) no-repeat;
+        background-size: 14px 14px;
+        background-position: top 11px left 10px;
+    }
+
+
     .calendarModal.tourInfoContentDate {
-        max-height: 44px !important;
         border: none !important;
         margin-bottom: 5px;
+        max-width: 250px !important;
     }
 
     .calendarModal.tourInfoContentDate input {
@@ -136,5 +197,32 @@
         padding: 0px 10px;
         max-width: 100%;
         margin-bottom: 10px;
+    }
+
+    .calendarModal.tourInfoContentDate {
+        max-height: 44px !important;
+        border: none !important;
+        margin-bottom: 5px;
+    }
+
+    .calendarModal.tourInfoContentDateMobail input {
+        padding: 0px !important;
+    }
+
+    .calendarModal.tourInfoContentDateMobail hr {
+        display: none !important;
+    }
+
+    .dropdownClass.tourInfoContentDateMobail.MuiInputBase-root {
+        min-height: 64px;
+        padding: 0px 10px;
+        max-width: 100%;
+        border-radius: 0px;
+    }
+
+    .calendarModal.tourInfoContentDateMobail {
+        border: none !important;
+        border-bottom: 1px solid #ccc !important;
+        border-radius: 0px !important;
     }
 }
