--- a/src/components/drivers/DriversBody/DriversProperties/components/PeopleMenu/PeopleMenu.css
+++ b/src/components/drivers/DriversBody/DriversProperties/components/PeopleMenu/PeopleMenu.css
@@ -16,7 +16,7 @@
     align-items: center;
     border-radius: 5px;
     padding: 10px 0px;
-    background: rgba(48, 66, 105, 0.6);
+    background: #304269;
     width: 100%;
     height: 100%;
 }
