--- a/src/components/drivers/DriversBody/DriversProperties/components/ValueMenu/ValueMenu.css
+++ b/src/components/drivers/DriversBody/DriversProperties/components/ValueMenu/ValueMenu.css
@@ -6,7 +6,7 @@
     box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
     width: 200px;
     height: 92px;
-    background-color: #828ca5;
+    background-color: #304269;
     z-index: 100;
     display: flex;
     flex-direction: column;
@@ -129,20 +129,20 @@
 }
 
 .MuiSlider-root {
-    color: #304269 !important;
+    color: #fff !important;
     width: 90% !important;
     margin: 0 auto !important;
 }
 
 .MuiSlider-root .MuiSlider-markActive {
-    background-color: #304269;
+    background-color: #fff;
 }
 
 .MuiSlider-root .MuiSlider-mark {
-    background-color: #304269;
+    background-color: #fff;
 }
 
 .MuiSlider-root .MuiSlider-rail {
-    background-color: #304269;
+    background-color: #fff;
     opacity: 1;
 }
