--- a/src/components/manipulator/Manipulator.css
+++ b/src/components/manipulator/Manipulator.css
@@ -13,7 +13,7 @@
     border-color: transparent;
     border-radius: 5px;
     box-shadow: 0 0 10px 0px rgba(0, 0, 0, 0.25);
-    background-color: #ffffff;
+    background-color: #304269;
     margin: 5% auto 3% auto;
 }
 
@@ -39,7 +39,7 @@
     display: flex;
     font-weight: 500;
     font-size: 12pt;
-    color: #304269;
+    color: #fff;
     margin: auto;
 }
 
