--- a/src/components/driverProfileRegistration/DriverProfileCalendar.css
+++ b/src/components/driverProfileRegistration/DriverProfileCalendar.css
@@ -76,6 +76,15 @@
     margin: 0 !important;
     margin-top: 30px !important;
     height: 30px !important;
+    overflow: hidden;
+}
+.multiLineInputClassAdditional{
+    height: 200px!important;
+    min-height: 200px!important;
+}
+.multiLineInputClassAdditional input{
+    height: 180px!important;
+    min-height: 180px!important;
 }
 .MuiSelect-icon{
     color: rgba(0, 0, 0, 0.5) !important;
