--- a/src/components/driverProfileRegistration/DriverProfileTripSettingsTour.css
+++ b/src/components/driverProfileRegistration/DriverProfileTripSettingsTour.css
@@ -227,7 +227,8 @@ div.tourContentCheckbox {
 
 .tourContent textarea {
     width: 100%;
-    max-height: 75px;
+    max-height: 200px;
+    min-height: 200px;
     border-radius: 5px;
     padding-left: 10px !important;
     border: 1px solid #ccc;
