--- a/src/components/TourDescription/TourInfo.css
+++ b/src/components/TourDescription/TourInfo.css
@@ -65,9 +65,9 @@
 }
 
 #places option {
-    color: #304269;
-    font-size: 14px;
-    font-weight: 400;
+    color: #304269 !important;
+    font-size: 14px !important;
+    font-weight: 400 !important;
 }
 
 .searchInputTourInfoContent:focus {
