--- a/src/components/drivers/DriversBody/DriversProperties/components/PeopleMenu/PeopleMenu.css
+++ b/src/components/drivers/DriversBody/DriversProperties/components/PeopleMenu/PeopleMenu.css
@@ -16,7 +16,7 @@
     align-items: center;
     border-radius: 5px;
     padding: 10px 0px;
-    background: #304269;
+    background: #fff;
     width: 100%;
     height: 100%;
 }
@@ -33,7 +33,7 @@
 .peopleMenu_element_part p {
     font-size: 10pt;
     line-height: 15px;
-    color: #fff;
+    color: #304269;
     margin: 0;
     padding: 0;
 }
@@ -91,7 +91,7 @@
 }
 
 .valueBlock_value_text {
-    color: #fff;
+    color: #304269;
     font-size: 10pt;
     margin: 0 5px;
 }
@@ -108,7 +108,7 @@
     border: none;
     text-decoration: none;
     cursor: pointer;
-    color: #fff;
+    color: #304269;
     font-size: 10pt;
     background: none;
 }
@@ -118,7 +118,7 @@
     border: none;
     text-decoration: none;
     cursor: pointer;
-    color: #fff;
+    color: #304269;
     font-size: 10pt;
     font-weight: bold;
     background: none;
