--- a/src/components/drivers/DriversBody/DriversProperties/components/ValueMenu/ValueMenu.css
+++ b/src/components/drivers/DriversBody/DriversProperties/components/ValueMenu/ValueMenu.css
@@ -6,7 +6,7 @@
     box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
     width: 200px;
     height: 92px;
-    background-color: #304269;
+    background-color: #fff;
     z-index: 100;
     display: flex;
     flex-direction: column;
@@ -30,7 +30,7 @@
     align-items: flex-end;
     font-size: 10pt;
     font-weight: 400;
-    color: #fff;
+    color: #304269;
 }
 
 .valueMenu_borderElement p {
@@ -70,7 +70,7 @@
 
 .valueMenu_selectBlock_leftBall {
     left: 0px;
-    background-color: #ffffff;
+    background-color: #304269;
     /* box-shadow: 0 0 1px 1px rgb(236, 236, 236); */
 }
 
@@ -93,7 +93,7 @@
     border: none;
     text-decoration: none;
     cursor: pointer;
-    color: #fff;
+    color: #304269;
     font-size: 10pt;
     font-weight: bold;
     background: none;
@@ -105,7 +105,7 @@
     border: none;
     text-decoration: none;
     cursor: pointer;
-    color: #fff;
+    color: #304269;
     font-size: 10pt;
     background: none;
 }
@@ -129,20 +129,20 @@
 }
 
 .MuiSlider-root {
-    color: #fff !important;
+    color: #304269 !important;
     width: 90% !important;
     margin: 0 auto !important;
 }
 
 .MuiSlider-root .MuiSlider-markActive {
-    background-color: #fff;
+    background-color: #304269;
 }
 
 .MuiSlider-root .MuiSlider-mark {
-    background-color: #fff;
+    background-color: #304269;
 }
 
 .MuiSlider-root .MuiSlider-rail {
-    background-color: #fff;
+    background-color: #304269;
     opacity: 1;
 }
