--- a/src/components/driverProfileRegistration/DriverProfileCar.css
+++ b/src/components/driverProfileRegistration/DriverProfileCar.css
@@ -115,16 +115,27 @@
     padding-right: 0px;
     background: none;
     width: 95%;
-    background: rgba(0, 0, 0, 0.2);
+    /* background: rgba(0, 0, 0, 0.2); */
     border-radius: 5px 5px 0 0;
+    margin-top: 5px;
+}
+
+.filledCardInformationNameCarDiv{
+    border-radius: 50%;
+    background: rgba(0, 0, 0, 0.5);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 40px;
+    height: 40px;
+    margin-right: 10px;
 }
 
 .cardInformationNameCarIcon {
-    width: 40px;
-    height: 45px;
+    width: 20px;
+    height: 20px;
     background: url(../media/moreWhite.svg) no-repeat;
-    background-size: 20px 20px;
-    background-position: top 15px right 10px;
+    background-size: 100% 100%;
     cursor: pointer;
     -webkit-transition: all 0.3s;
     -o-transition: all 0.3s;
@@ -134,8 +145,7 @@
 
 .cardInformationNameCarIcon:hover {
     background: url(../media/moreOrange.svg) no-repeat;
-    background-size: 20px 20px;
-    background-position: top 15px right 10px;
+    background-size: 100% 100%;
 }
 
 .cardInformationNameCarIcon:hover~.filledCardInformationMenu {
@@ -149,7 +159,7 @@
 .filledCardInformationMenu {
     display: none;
     position: absolute;
-    top: 40px;
+    top: 34px;
     right: 15px;
     z-index: 3;
     height: 100px;
