--- a/src/components/PlaceDescription/PlaceDescription.css
+++ b/src/components/PlaceDescription/PlaceDescription.css
@@ -366,6 +366,8 @@ h2 {
 }
 
 .placePhotos_elementBlock img {
+    max-height: 250px;
+    object-fit: cover;
     transition: all 0.3s;
     box-shadow: 0 0 10px 1px rgba(0, 0, 0, 0.2);
 }
