--- a/src/components/drivers/DriversBody/DriversBlock/DriversBlock.css
+++ b/src/components/drivers/DriversBody/DriversBlock/DriversBlock.css
@@ -342,6 +342,24 @@
     line-height: 30px;
 }
 
+.driverGuideBlock {
+    min-width: 32px;
+    height: 56px;
+    position: absolute;
+    right: 0
+}
+.driverGuideImage {
+    min-width: 32px;
+    height: 32px;
+    background: url('../../../media/tour-guide.svg') no-repeat;
+    background-size: 38px 32px;
+    background-position: center;
+}
+.driverGuideText {
+    font-size: 12px;
+    line-height: 12px;
+    text-align: center;
+}
 @media (max-width: 1140px) {}
 
 @media (max-width: 742px) {
