--- a/src/components/PlaceDescription/PlaceDescription.css
+++ b/src/components/PlaceDescription/PlaceDescription.css
@@ -229,6 +229,8 @@ h2 {
     /*margin: 2px;*/
     max-height: 41px;
     min-height: 41px;
+    display: flex;
+    align-items: center;
 }
 
 .routeDescrDate div {
@@ -238,8 +240,9 @@ h2 {
     font-weight: 400 !important;
     font-size: 16px !important;
     max-height: 41px;
-    line-height: 41px;
+    /* line-height: 41px; */
     bottom: 0 !important;
+    height: max-content !important;
 }
 
 .placeDescrDate-Check {
@@ -254,6 +257,7 @@ h2 {
     font-size: 14px !important;
     max-height: 41px;
     line-height: 41px;
+   
 }
 
 .routeDescrDate input,
