--- a/src/components/PlaceDescription/PlaceDescription.css
+++ b/src/components/PlaceDescription/PlaceDescription.css
@@ -39,7 +39,7 @@ h2 {
     background-size: 100% 100% !important;
     /* filter: brightness(0.5); */
     padding-bottom: 50px;
-    box-shadow: 0 0 30px rgba(0, 0, 0, 0.5);
+    box-shadow: 0 0 17px rgba(0, 0, 0, 0.5);
     overflow: hidden;
 }
 
@@ -49,7 +49,7 @@ h2 {
     width: 100%;
     height: 100%; */
     /* filter: brightness(0.5); */
-    background-color: rgba(0, 0, 0, 0.5);
+    background-color: rgba(0, 0, 0, 0.3);
     min-height: 210px;
 }
 
@@ -58,6 +58,32 @@ h2 {
     border-bottom: 1px solid #383737;
     font-size: 22px;
     font-weight: 500;
+}
+
+.placeDescription_author span{
+    color: #304269;
+    font-size: 14px;
+    font-weight: 400;
+    /* max-height: 20px; */
+}
+
+
+.placeDescription_author h5{
+    color: #304269;
+    margin-bottom: 0px;
+}
+
+.placeDescription_author p{
+    font-size: 14px;
+    font-weight: 400;
+    color: #666;
+}
+
+.placeDescription_author img{
+    object-fit: cover;
+    width: 160px;
+    height: 160px;
+    border-radius: 50%;
 }
 
 .placeDescription_block {
@@ -370,7 +396,7 @@ h2 {
 }
 
 .placePhotos_elementBlock img {
-    max-height: 250px;
+    max-height: 155px;
     object-fit: cover;
     transition: all 0.3s;
     box-shadow: 0 0 10px 1px rgba(0, 0, 0, 0.2);
