--- a/src/components/TourDescription/TourInfo.css
+++ b/src/components/TourDescription/TourInfo.css
@@ -172,6 +172,15 @@
 }
 
 @media (max-width: 768px) {
+    .tourInfoBlock {
+        position: relative;
+        background: #fff;
+        border-radius: 5px;
+        padding: 0px !important;
+        margin-bottom: 25px !important;
+        margin: 0px;
+        box-shadow: none;
+    }
     .tourInfoContent p {
         font-size: 20px;
         margin-bottom: 10px;
