--- a/src/components/Guides/Guides.css
+++ b/src/components/Guides/Guides.css
@@ -6,3 +6,22 @@
     max-height: 145px;
     padding: 0px 10px;
 }
+/*
+.guidesSortElement{
+    height: 100%;
+    background: transparent;
+    border: none;
+    line-height: 35px;
+    padding: 0;
+    color: rgba(0, 0, 0, 0.7);
+    font-size: 14px;
+    font-weight: 500;
+    text-transform: uppercase;
+    cursor: pointer;
+    margin: 0 15px;
+}
+*/
+.guidesSortElementsBlock span{
+    margin: 0 15px!important
+}
+
