--- a/src/components/header/header_css.css
+++ b/src/components/header/header_css.css
@@ -324,6 +324,12 @@
     background-position: center right 20px;
 }
 
+.burgerMenuBlock .guides {
+    background: url(../media/tour-guide-Gray.svg)no-repeat;
+    background-size: 20px 20px;
+    background-position: center right 20px;
+}
+
 .burgerMenuBlock .timetable {
     background: url(../media/timetable.svg)no-repeat;
     background-size: 25px 25px;
