--- a/src/components/PlaceDescription/PlaceDescription.css
+++ b/src/components/PlaceDescription/PlaceDescription.css
@@ -90,6 +90,8 @@ h2 {
     padding-top: 30px;
     border-top: 1px solid transparent;
     color: rgb(0, 0, 0, 0.8);
+    overflow-y: hidden;
+    transition: all 0.3s;
 }
 
 .placeDescription_description_name {
