--- a/src/components/header/RenderModalRegistration.css
+++ b/src/components/header/RenderModalRegistration.css
@@ -21,9 +21,19 @@
 }
 
 .registrationBodyLanguageBlock i{
+    cursor: pointer;
     width: 12px;
     height: 12px;
     background: url(../media/closeGray.svg) no-repeat;
+    background-size: 100% 100%;
+    transition: all 0.3s;
+}
+
+.registrationBodyLanguageBlock i:hover{
+    cursor: pointer;
+    width: 12px;
+    height: 12px;
+    background: url(../media/closeOrange.svg) no-repeat;
     background-size: 100% 100%;
 }
 
