--- a/src/components/driverProfileRegistration/DriverProfileTripSettingsTour.css
+++ b/src/components/driverProfileRegistration/DriverProfileTripSettingsTour.css
@@ -27,6 +27,7 @@
     border-color: #a5252580 !important;
     border-width: 2px!important;
     outline-width: 2px!important;
+    color: #e81123!important;
 }
 .errorColor hr{
     border-color: #a5252580 !important;
