--- a/src/components/Places/PlacesList.css
+++ b/src/components/Places/PlacesList.css
@@ -13,7 +13,7 @@
     line-height: 20px;
     font-weight: 500;
     max-height: 42px;
-    min-height: 42px;
+    /* min-height: 42px; */
     text-overflow: ellipsis;
     overflow: hidden;
     color: #304269;
@@ -96,8 +96,8 @@
 }
 
 .placesList_info_position_textStyle {
-    margin-left: 5px;
-    width: 90%;
+    margin: 0px;
+    width: 100%;
     /* white-space: nowrap; */
     overflow: hidden;
     color: #686868;
@@ -105,7 +105,7 @@
 .placesList_info_textCss{
     color: #686868;
     font-size: 12px;
-    margin: 0px;
+    margin: 0px ;
 }
 .placesList_info_icons{
     display: block;
