--- a/src/components/RouteDescription/RouteDescription.css
+++ b/src/components/RouteDescription/RouteDescription.css
@@ -85,7 +85,8 @@
 }
 
 .routeTravelBlock_element {
-    padding: 5px !important;
+    padding: 5px 10px !important;
+    padding-left: 0px !important;
     cursor: not-allowed;
 }
 
