--- a/src/components/TourDescription/TourDescription.css
+++ b/src/components/TourDescription/TourDescription.css
@@ -12,7 +12,7 @@
 
 .routeTravelBlock_pointBlock {
     padding: 20px 0;
-    margin: 0 0 auto 0;
+    margin: 0px;
     width: 100%;
 }
 
@@ -85,7 +85,8 @@
 }
 
 .routeTravelBlock_element {
-    padding: 5px !important;
+    padding: 5px 10px !important;
+    padding-left: 0px !important;
     cursor: not-allowed;
 }
 
