add avatar editor

--- a/src/components/UserProfile/UserProfileTrevelHistory.css
+++ b/src/components/UserProfile/UserProfileTrevelHistory.css
@@ -74,7 +74,7 @@
 .openCollapse {
     position: relative;
     z-index: 80;
-    background: #fff;
+    background: none;
 }
 
 .trevelHistoryBody img:hover {
