--- a/src/components/driverProfile/DriverProfile.css
+++ b/src/components/driverProfile/DriverProfile.css
@@ -325,6 +325,7 @@ span.drivers_route_messege{
     color: #304269;
     font-weight: 400;
     font-size: 24px;
+    white-space: nowrap;
 }
 
 h3.drivers_routePrice {
@@ -339,6 +340,7 @@ h3.drivers_routePrice {
     background: #304269;
     /* border: 1px solid #f60; */
     transition: all 0.3s;
+    white-space: nowrap;
 }
 
 .drivers_routeBtn-active {
