--- a/src/components/driverProfileRegistration/DriverProfileBasicInformation.css
+++ b/src/components/driverProfileRegistration/DriverProfileBasicInformation.css
@@ -122,8 +122,8 @@
 }
 
 .refreshIndicatorModal {
-    position: fixed;
-    z-index: 1600;
+    position: fixed ;
+    z-index:99999999;        
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
