--- a/src/components/header/header_css.css
+++ b/src/components/header/header_css.css
@@ -188,9 +188,16 @@
     color: #fff;
     line-height: 65px;
     white-space: nowrap;
+    transition: all 0.3s;
 }
 
 .buttonMassLink:hover {
+    color: #fff;
+    background: rgba(0, 0, 0, 0.2);
+    text-decoration: none;
+}
+
+.buttonMassLink_active{
     transition: all 0.3s;
     color: #fff;
     background: rgba(0, 0, 0, 0.2);
@@ -326,7 +333,7 @@
 }
 
 .burgerMenuBlock .guides {
-    background: url(../media/tour-guide-Gray.svg)no-repeat;
+    background: url(../media/tour-guideMenuGray.svg)no-repeat;
     background-size: 20px 20px;
     background-position: center right 20px;
 }
