--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -123,7 +123,7 @@ html {
     width: 20px;
     height: 20px;
     margin-bottom: 5px;
-    background: url(../media/locationGray.svg) 100% 100% no-repeat;
+    background: url(../media/geo_icon.svg) 100% 100% no-repeat;
     background-size: contain;
 }
 
